option('composite',   type: 'boolean', value: true)
option('damage',      type: 'boolean', value: true)
option('dbe',         type: 'boolean', value: true)
option('dpms',        type: 'boolean', value: true)
option('dri2',        type: 'boolean', value: true)
option('dri3',        type: 'boolean', value: true)
option('glx',         type: 'boolean', value: true)
option('present',     type: 'boolean', value: true)
option('randr',       type: 'boolean', value: true)
option('record',      type: 'boolean', value: true)
option('render',      type: 'boolean', value: true)
option('resource',    type: 'boolean', value: true)
option('screensaver', type: 'boolean', value: true)
option('shape',       type: 'boolean', value: true)
option('shm',         type: 'boolean', value: true)
option('sync',        type: 'boolean', value: true)
option('xevie',       type: 'boolean', value: true)
option('xfree86_dri', type: 'boolean', value: true)
option('xfixes',      type: 'boolean', value: true)
option('xinerama',    type: 'boolean', value: true)
option('xinput',      type: 'boolean', value: true)
option('xkb',         type: 'boolean', value: true)
option('xprint',      type: 'boolean', value: true)
option('selinux',     type: 'boolean', value: true)
option('xtest',       type: 'boolean', value: true)
option('xv',          type: 'boolean', value: true)
option('xvmc',        type: 'boolean', value: true)
option('ge',          type: 'boolean', value: true)