inc_xcb += include_directories(
    '.',
    'xcb'
)

install_headers(
    'xcb' / 'xcb_atom.h',
    'xcb' / 'xcb_aux.h',
    'xcb' / 'xcb_cursor.h',
    'xcb' / 'xcb_errors.h',
    'xcb' / 'xcb_event.h',
    'xcb' / 'xcb_icccm.h',
    'xcb' / 'xcb_image.h',
    'xcb' / 'xcb_keysyms.h',
    'xcb' / 'xcb_renderutil.h',
    'xcb' / 'xcb_util.h',
    subdir: 'xcb'
)