xcb_gen = find_program('xcbgen.py')

xcbgen_deps = [
    meson.current_source_dir() / '__init__.py',
    meson.current_source_dir() / 'error.py',
    meson.current_source_dir() / 'expr.py',
    meson.current_source_dir() / 'align.py',
    meson.current_source_dir() / 'matcher.py',
    meson.current_source_dir() / 'state.py',
    meson.current_source_dir() / 'xtypes.py',
]